--- a/lemperwilkerstat6171.html
+++ b/lemperwilkerstat6171.html
@@ -16,7 +16,6 @@
   </header>
 
   <main class="max-w-7xl mx-auto p-4 space-y-6">
-    <!-- Filters -->
     <section class="flex flex-wrap gap-2">
       <select id="filterPML" class="p-2 border rounded">
         <option value="ALL">Semua PML</option>
@@ -24,30 +23,27 @@
       <input id="searchPPL" type="text" placeholder="Cari PPL..." class="p-2 border rounded flex-1"/>
     </section>
 
-    <!-- KPI Cards -->
     <section id="kpi" class="grid grid-cols-1 md:grid-cols-4 gap-4"></section>
 
-    <!-- Chart -->
     <section class="bg-white border rounded p-4 shadow">
       <h2 class="font-semibold mb-2">Rangkuman per PML</h2>
       <canvas id="pmlChart" height="100"></canvas>
     </section>
 
-    <!-- Table -->
     <section class="bg-white border rounded p-4 shadow overflow-auto">
       <table class="min-w-full text-sm" id="dataTable">
         <thead class="bg-gray-100">
           <tr>
-            <th class="p-2 text-left">PML</th>
-            <th class="p-2 text-left">PPL</th>
-            <th class="p-2 text-right">SLSMASTER</th>
-            <th class="p-2 text-right">PROJECT</th>
-            <th class="p-2 text-right">%PROJECT</th>
-            <th class="p-2 text-right">FINALISASI</th>
-            <th class="p-2 text-right">%FINALISASI</th>
-            <th class="p-2 text-right">LANDMARK</th>
-            <th class="p-2 text-right">BATASSLS</th>
-            <th class="p-2 text-right">BATASSEGMEN</th>
+            <th class="p-2 text-left cursor-pointer" data-key="PML">PML</th>
+            <th class="p-2 text-left cursor-pointer" data-key="PPL">PPL</th>
+            <th class="p-2 text-right cursor-pointer" data-key="SLSMASTER">SLSMASTER</th>
+            <th class="p-2 text-right cursor-pointer" data-key="PROJECT">PROJECT</th>
+            <th class="p-2 text-right cursor-pointer" data-key="%PROJECT">%PROJECT</th>
+            <th class="p-2 text-right cursor-pointer" data-key="FINALISASIPROJECT">FINALISASI</th>
+            <th class="p-2 text-right cursor-pointer" data-key="%FINALISASIPROJECT">%FINALISASI</th>
+            <th class="p-2 text-right cursor-pointer" data-key="LANDMARK">LANDMARK</th>
+            <th class="p-2 text-right cursor-pointer" data-key="BATASSLS">BATASSLS</th>
+            <th class="p-2 text-right cursor-pointer" data-key="BATASSEGMEN">BATASSEGMEN</th>
           </tr>
         </thead>
         <tbody></tbody>
@@ -59,6 +55,8 @@
     const CSV_URL = "https://docs.google.com/spreadsheets/d/1aOhkt2XboN2z0UBJDoka3nQIxDm_mFgaEdDvQFWtg5o/export?format=csv&gid=2134444139";
     let allData = [];
     let chart;
+    let sortKey = null;
+    let sortAsc = true;
 
     function parseNumber(v) {
       if (!v) return 0;
@@ -79,12 +77,25 @@
             obj["%PROJECT"] = parseNumber(obj["%PROJECT"]);
             obj.FINALISASIPROJECT = parseNumber(obj.FINALISASIPROJECT);
             obj["%FINALISASIPROJECT"] = parseNumber(obj["%FINALISASIPROJECT"]);
-            obj.LANDMARK = obj.LANDMARK; // biarkan apa adanya (string/angka asli)
+            obj.LANDMARK = obj.LANDMARK;
             obj.BATASSLS = parseNumber(obj.BATASSLS);
             obj.BATASSEGMEN = parseNumber(obj.BATASSEGMEN);
             return obj;
           });
           renderDashboard();
+
+          document.querySelectorAll("#dataTable thead th").forEach(th => {
+            th.addEventListener("click", () => {
+              const key = th.getAttribute("data-key");
+              if (sortKey === key) {
+                sortAsc = !sortAsc;
+              } else {
+                sortKey = key;
+                sortAsc = true;
+              }
+              updateView();
+            });
+          });
         });
     }
 
@@ -100,10 +111,27 @@
     function updateView() {
       const filterPML = document.getElementById("filterPML").value;
       const searchPPL = document.getElementById("searchPPL").value.toLowerCase();
-      const filtered = allData.filter(d =>
+      let filtered = allData.filter(d =>
         (filterPML === "ALL" || d.PML === filterPML) &&
         (!searchPPL || d.PPL.toLowerCase().includes(searchPPL))
       );
+
+      if (sortKey) {
+        filtered.sort((a, b) => {
+          let valA = a[sortKey];
+          let valB = b[sortKey];
+          const numA = parseFloat(valA);
+          const numB = parseFloat(valB);
+          if (!isNaN(numA) && !isNaN(numB)) {
+            valA = numA;
+            valB = numB;
+          }
+          if (valA < valB) return sortAsc ? -1 : 1;
+          if (valA > valB) return sortAsc ? 1 : -1;
+          return 0;
+        });
+      }
+
       renderKPI(filtered);
       renderChart(filtered);
       renderTable(filtered);
@@ -148,8 +176,8 @@
         data: {
           labels,
           datasets: [
-            { label: '%PROJECT', data: projVals, backgroundColor: '#3b82f6' },
-            { label: '%FINALISASI', data: finalVals, backgroundColor: '#22c55e' }
+            { label: '%PROJECT', data: projVals, backgroundColor: '#f79039' },
+            { label: '%FINALISASI', data: finalVals, backgroundColor: '#ffd635' }
           ]
         },
         options: { responsive: true, scales: { y: { max: 100, beginAtZero: true } } }
