--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
     <div class="flex flex-col sm:flex-row gap-6 justify-center">
       <!-- Card 1 -->
-      <a href="lempersls6171.html" class="card bg-white rounded-xl p-6 w-64 text-center">
+      <a href="lemperproject6171.html" class="card bg-white rounded-xl p-6 w-64 text-center">
         <div class="text-orange-500 text-5xl mb-4">📊</div>
         <h2 class="text-xl font-semibold mb-2">Status SLS</h2>
         <p class="text-sm text-gray-600">Lihat progres pengerjaan dan status finalisasi SLS.</p>
       </a>
 
       <!-- Card 2 -->
-      <a href="lemperwilkerstat6171.html" class="card bg-white rounded-xl p-6 w-64 text-center">
+      <a href="lemperprogress.html" class="card bg-white rounded-xl p-6 w-64 text-center">
         <div class="text-yellow-500 text-5xl mb-4">📈</div>
-        <h2 class="text-xl font-semibold mb-2">LEMPER Wilkerstat</h2>
+        <h2 class="text-xl font-semibold mb-2">Progress Wilkerstat</h2>
         <p class="text-sm text-gray-600">Pantau perkembangan dan data kegiatan Wilkerstat.</p>
       </a>
     </div>
@@ -53,3 +53,4 @@
 
 </body>
 </html>
+
