--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </a>
 
       <!-- Card 2 -->
-      <a href="lemperprogress.html" class="card bg-white rounded-xl p-6 w-64 text-center">
+      <a href="lemperprogress6171.html" class="card bg-white rounded-xl p-6 w-64 text-center">
         <div class="text-yellow-500 text-5xl mb-4">📈</div>
         <h2 class="text-xl font-semibold mb-2">Progress Wilkerstat</h2>
         <p class="text-sm text-gray-600">Pantau perkembangan dan data kegiatan Wilkerstat.</p>
@@ -53,4 +53,5 @@
 
 </body>
 </html>
+
 
