--- a/lemperproject6171.html
+++ b/lemperproject6171.html
@@ -3,17 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LEMPER WILKERSTAT 6171</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Dashboard Status SLS</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <header class="bg-white shadow p-4">
-    <h1 class="text-2xl font-bold">LEMPER WILKERSTAT 6171</h1>
-    <div class="mt-1 text-sm text-gray-500">
-      Dashboard Laporan Evaluasi & Monitoring Pemetaan Wilayah Kerja Statistik BPS Kota Pontianak
-    </div>
-  </header>
 <body class="bg-light">
 
 <div class="container py-4">
@@ -209,4 +202,3 @@ function renderChart(data) {
 
 </body>
 </html>
-
